--- a/typescript-version/full-version/src/@core/scss/_vertical-nav.scss
+++ b/typescript-version/full-version/src/@core/scss/_vertical-nav.scss
@@ -3,10 +3,20 @@
 @use "@configured-variables" as variables;
 @use "@core/scss/mixins" as mixins;
 @use "vuetify/lib/styles/tools/states" as vuetifyStates;
+@use "vuetify/lib/styles/tools/elevation" as elevation;
 
 .layout-nav-type-vertical {
   // 👉 Layout Vertical nav
   .layout-vertical-nav {
+    $sl-layout-nav-type-vertical: &;
+
+    @at-root {
+      // ℹ️ Add styles for collapsed vertical nav
+      .layout-vertical-nav-collapsed#{$sl-layout-nav-type-vertical}.hovered {
+        @include elevation.elevation(6);
+      }
+    }
+
     background-color: variables.$vertical-nav-background-color;
 
     // 👉 Nav header
@@ -14,6 +24,7 @@
       overflow: hidden;
       padding: variables.$vertical-nav-header-padding;
       block-size: variables.$vertical-nav-header-height;
+      margin-inline: variables.$vertical-nav-header-inline-spacing;
 
       // TEMPLATE: Check if we need to move this to master
       .app-logo {
@@ -23,6 +34,33 @@
 
       .app-title {
         margin-inline-start: variables.$vertical-nav-header-logo-title-spacing;
+      }
+    }
+
+    // 👉 Nav items shadow
+    .vertical-nav-items-shadow {
+      position: absolute;
+      z-index: 1;
+      background:
+        linear-gradient(
+          rgb(#{variables.$vertical-nav-background-color-rgb}) 5%,
+          rgba(#{variables.$vertical-nav-background-color-rgb}, 85%) 30%,
+          rgba(#{variables.$vertical-nav-background-color-rgb}, 50%) 75%,
+          transparent
+        );
+      block-size: 64px;
+      inline-size: 100%;
+      inset-block-start: calc(#{variables.$vertical-nav-header-height} - 2px);
+      opacity: 0;
+      pointer-events: none;
+      transform: translateX(-8px);
+      transition: opacity 0.15s ease-in-out;
+      will-change: opacity;
+    }
+
+    &.scrolled {
+      .vertical-nav-items-shadow {
+        opacity: 1;
       }
     }
 
@@ -135,20 +173,6 @@
       &.open {
         > :first-child {
           @extend %vertical-nav-group-open-active;
-        }
-      }
-    }
-  }
-
-  &.layout-vertical-nav-collapsed {
-    .layout-vertical-nav {
-      &:not(.hovered) {
-        .app-logo {
-          transform: translateX(variables.$vertical-nav-mini-logo-translate-x);
-
-          @include layoutsMixins.rtl {
-            transform: translateX(-(variables.$vertical-nav-mini-logo-translate-x));
-          }
         }
       }
     }
