--- a/typescript-version/full-version/src/@core/scss/placeholders/_vertical-nav.scss
+++ b/typescript-version/full-version/src/@core/scss/placeholders/_vertical-nav.scss
@@ -7,7 +7,7 @@
   margin-block: 0;
   margin-inline: variables.$vertical-nav-horizontal-spacing;
   padding-block: 0;
-  padding-inline: 0.75rem;
+  padding-inline: variables.$vertical-nav-horizontal-padding;
   white-space: nowrap;
 }
 
